src/test/deca/etapeB/invalid/while_not_boolean.deca
// Description : 
// 	test de condition non boolean dans while   
//Resultat:
//      Erreur Contextuelle :la condition doit etre boolean 
{
if (1){
   println();
}
}